--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -10,5 +10,21 @@ h3 {
 	color: rgb(54, 54, 54);
 }
 
+h3,
+h4 {
+	font-weight: 700;
+	color: rgb(100, 100, 100);
+}
+
+body {
+	font-family: "Lato", sans-serif;
+}
+
+input:focus {
+	outline: none !important;
+}
+
 @import "./player";
 @import "./song";
+@import "./library";
+@import "./nav";
