--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -3,7 +3,6 @@ nav {
 	display: flex;
 	align-items: center;
 	justify-content: space-around;
-
 	button {
 		border: none;
 		background: transparent;
@@ -16,6 +15,14 @@ nav {
 		&:hover {
 			background: rgb(65, 65, 65);
 			color: white;
+		}
+	}
+}
+
+@media screen and (max-width: 768px) {
+	nav {
+		button {
+			z-index: 102;
 		}
 	}
 }
