--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -13,12 +13,17 @@
 	input {
 		// flex: 1;
 		width: 100%;
-		padding: 1rem 0rem;
+		// padding: 1rem 0rem;
+		-webkit-appearance: none;
+		background: transparent;
+		cursor: pointer;
 	}
 
 	p {
-		padding: 1rem 0.2rem;
+		padding: 0rem 0.2rem;
 		font-size: 0.8rem;
+		width: 80px;
+		text-align: center;
 	}
 }
 
@@ -30,5 +35,42 @@
 	padding: 1rem 2rem;
 	svg {
 		cursor: pointer;
+		color: #2ab3bf;
+	}
+}
+
+input[type="range"]::-webkit-slider-thumb {
+	-webkit-appearance: none;
+	height: 16px;
+	width: 16px;
+	border-radius: 50%;
+}
+
+.track {
+	// background-color: #205950;
+	width: 100%;
+	height: 1rem;
+	border-radius: 1rem;
+	position: relative;
+	overflow: hidden;
+}
+
+.animate-track {
+	width: 100%;
+	height: 100%;
+	background-color: rgb(204, 204, 204);
+	position: absolute;
+	top: 0;
+	left: 0;
+	transform: translateX(10%);
+	pointer-events: none;
+}
+
+@media screen and (max-width: 768px) {
+	.time-control {
+		width: 100%;
+	}
+	.play-control {
+		width: 60%;
 	}
 }
