--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -24,6 +24,14 @@ input:focus {
 	outline: none !important;
 }
 
+.App {
+	transition: all 0.5s ease;
+}
+
+.library-active {
+	margin-left: 30%;
+}
+
 @import "./player";
 @import "./song";
 @import "./library";
